--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B11A1-assignment-1</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <h1>hello</h1>
+
+<body class="open-sans-normal">
+    <header class="body-bg">
+        <nav class="nav">
+            <div>
+                <p class="nav-title">Bangladesh 2.0</p>
+            </div>
+            <div>
+                <button>Sign in</button>
+            </div>
+        </nav>
+        <section class="banner-details">
+            <div class="banner-content">
+                <p class="banner-title">Bangladesh 2.0</p>
+                <p class="banner-description">Idea, innovation,<br>vision and challenges in<br> New Bangladesh.</p>
+                <button class="banner-button">Explore New Bangladesh</button>
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero.png" alt="">
+            </div>
+        </section>
+    </header>
+    <main class="body-bg">
+
+    </main>
+
+    <footer class="footer">
+        <p class="footer-title">Bangladesh 2.0</p>
+        <div class="footer-logo">
+            <hr class="footer-horizontal-line">
+            <img class="footer-img" src="assets/facebook.png" alt="">
+            <img class="footer-img" src="assets/instagram.png" alt="">
+            <img class="footer-img" src="assets/x.png" alt="">
+        </div>
+    </footer>
 </body>
+
 </html>
