--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body class="open-sans-normal">
     <header class="body-bg">
+        <!-- nav -->
         <nav class="nav">
             <div>
                 <p class="nav-title">Bangladesh 2.0</p>
@@ -18,6 +19,7 @@
                 <button>Sign in</button>
             </div>
         </nav>
+        <!-- banner -->
         <section class="banner-details">
             <div class="banner-content">
                 <p class="banner-title">Bangladesh 2.0</p>
@@ -30,6 +32,131 @@
         </section>
     </header>
     <main class="body-bg">
+        <!-- the vision of container -->
+        <section class="visions">
+            <h3 class="vision-title">The Vision of Future</h3>
+            <p class="vision-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
+                global model of development.</p>
+            <div class="vision-container">
+                <div class="vision-1 vision">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="vision-title">Digital Transformation</h4>
+                    <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and
+                        access to services for all citizens.</p>
+                    <button class="vision-button-1 vision-button">Learn More </button>
+                </div>
+                <div class="vision-2 vision">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="vision-title">Green Energy</h4>
+                    <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and
+                        eco-friendly future.</p>
+                    <button class="vision-button-2 vision-button">Learn More</button>
+                </div>
+                <div class="vision-3 vision">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="vision-title">Modern Infrastructure</h4>
+                    <p class="vision-description">Building state-of-the-art infrastructure to support economic growth
+                        and global competitiveness.</p>
+                    <button class="vision-button-3 vision-button">Learn More </button>
+                </div>
+            </div>
+        </section>
+
+        <!-- recent news-1 -->
+        <section class="recent-news">
+            <h3 class="recent-news-title">Recent News</h3>
+            <p class="recent-news-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
+                global model of development.</p>
+            <div class="recent-news-container">
+                <div class="news-img">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div class="news">
+                    <h4 class="news-heading">Bangladesh Launches New Satellite</h4>
+                    <div class="newspaper-logo">
+                        <img src="assets/al-jazeera.png" alt="">
+                    </div>
+                    <div class="news-calender">
+                        <div class="news-date">
+                            <p>Date: 05/01/2025</p>
+                        </div>
+                        <div class="news-time">
+                            <p>Time: 10.25 PM</p>
+                        </div>
+                    </div>
+                    <p class="news-description">Not until the creation and maintenance of decent conditions of life for
+                        all people are recognized and accepted as a common obligation of all people and all
+                        countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="news-button">Read More</button>
+                </div>
+            </div>
+        </section>
+        <!-- recent news-2 -->
+        <section class="recent-news">
+            <div class="recent-news-container">
+                <div class="news">
+                    <h4 class="news-heading">Bangladesh Launches New Satellite</h4>
+                    <div class="newspaper-logo">
+                        <img src="assets/al-jazeera.png" alt="">
+                    </div>
+                    <div class="news-calender">
+                        <div class="news-date">
+                            <p>Date: 05/01/2025</p>
+                        </div>
+                        <div class="news-time">
+                            <p>Time: 10.25 PM</p>
+                        </div>
+                    </div>
+                    <p class="news-description">Not until the creation and maintenance of decent conditions of life for
+                        all people are recognized and accepted as a common obligation of all people and all
+                        countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="news-button">Read More</button>
+                </div>
+                <div class="news-img">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- donate today -->
+        <section class="section-donate">
+            <h3 class="section-donate-title">Donate Today</h3>
+            <p class="section-donate-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="donate-container">
+                <div class=""><button class="donate">100 Taka</button></div>
+                <div class=""><button class="donate">200 Taka</button></div>
+                <div class=""><button class="donate">500 Taka</button></div>
+                <div class=""><button class="donate">1000 Taka</button></div>
+            </div>
+            <div class="donate-other-amount">
+                <buttton>Other Amount (Taka)</button>
+            </div>
+            <button class="donate-button">Done Now</button>
+        </section>
+        <!-- subscribe newslatter -->
+        <section class="section-newslatter">
+            <h2 class="section-newslatter-title">Subscribe Newsletter</h2>
+            <div class="section-newslatter-description">
+                <p>Bangladesh 2.0 aims to redefine the nation's trajectory by
+                    embracing cutting-edge technology, promoting inclusive growth.</p>
+            </div>
+            <div class="newslatter-container">
+                    <input class="search-input" placeholder="Enter your email here">
+                    <div class="newslatter-subscribe">
+                        <button class="newslatter-subscribe-button">Subscribe</button>
+                    </div>
+            </div>
+            <div class="section-newslatter-description">
+                <p>We promise not to spam you!</p>
+            </div>
+        </section>
 
     </main>
 
