--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
         <!-- the vision of container -->
         <section class="visions">
             <h3 class="vision-title">The Vision of Future</h3>
-            <p class="vision-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
-                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
-                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
-                global model of development.</p>
+            <p class="vision-description">The vision for New Bangladesh is rooted in the synergy of ideas, innovation,
+                and foresight, embracing a future where progress is shaped by creativity and technological advancements.
+                It envision</p>
             <div class="vision-container">
                 <div class="vision-1 vision">
                     <img src="assets/card-icon.png" alt="">
@@ -63,14 +62,26 @@
                 </div>
             </div>
         </section>
+        <!-- Quote Section -->
+         <section class="quote-section">
+            <div class="quote-box">
+                <p class="quote-description">Dr. Muhammad Yunus, a Nobel Peace Prize laureate from Bangladesh, is renowned as the pioneer of microfinance and social business. Through the Grameen Bank, he revolutionized access to credit for the poor, particularly women, enabling economic empowerment and poverty reduction worldwide. His visionary work continues to inspire efforts for financial inclusion and social innovation.</p>
+            </div>
+            <div class="quote-content">
+                <h3 class="quote-heading">Dr. Muhammad Yunus</h3>
+                <p class="quote-description">Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+         </section>
 
         <!-- recent news-1 -->
         <section class="recent-news">
             <h3 class="recent-news-title">Recent News</h3>
-            <p class="recent-news-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
-                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
-                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
-                global model of development.</p>
+            <p class="recent-news-description">
+                Recent news in New Bangladesh reflects its vision of progress through ideas and innovation. The European
+                Investment Bank's €2 billion pledge supports sustainable energy and climate resilience, while record
+                gold prices highlight economic adaptability amid challenges. In sports, Tamim Iqbal’s retirement marks a
+                leadership shift, and ongoing anti-corruption investigations underscore a commitment to transparency and
+                good governance.</p>
             <div class="recent-news-container">
                 <div class="news-img">
                     <img src="assets/satelite.png" alt="">
@@ -106,16 +117,15 @@
                     </div>
                     <div class="news-calender">
                         <div class="news-date">
-                            <p>Date: 05/01/2025</p>
+                            <p>Date: 08/01/2025</p>
                         </div>
                         <div class="news-time">
-                            <p>Time: 10.25 PM</p>
+                            <p>Time: 11.25 PM</p>
                         </div>
                     </div>
-                    <p class="news-description">Not until the creation and maintenance of decent conditions of life for
-                        all people are recognized and accepted as a common obligation of all people and all
-                        countries—not until then shall we,
-                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="news-description">Humanity can only be considered civilized when all nations and people
+                        take shared responsibility for ensuring dignity, equality, and decent living conditions for
+                        everyone.</p>
                     <button class="news-button">Read More</button>
                 </div>
                 <div class="news-img">
@@ -123,12 +133,46 @@
                 </div>
             </div>
         </section>
+        <!-- recent news-3 -->
+        <section class="recent-news">
+            <h3 class="recent-news-title">Recent News</h3>
+            <p class="recent-news-description">
+                Recent news in New Bangladesh highlights progress and challenges shaping the nation's future. Key
+                developments include the European Investment Bank's €2 billion support for green energy and climate
+                resilience, rising gold prices reflecting economic shifts, Tamim Iqbal's retirement marking a cricket
+                milestone, and anti-corruption efforts emphasizing transparency. These events showcase Bangladesh's
+                drive toward innovation, resilience, and ethical governance.</p>
+            <div class="recent-news-container">
+                <div class="news-img">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div class="news">
+                    <h4 class="news-heading">Bangladesh Launches New Satellite</h4>
+                    <div class="newspaper-logo">
+                        <img src="assets/al-jazeera.png" alt="">
+                    </div>
+                    <div class="news-calender">
+                        <div class="news-date">
+                            <p>Date: 15/01/2025</p>
+                        </div>
+                        <div class="news-time">
+                            <p>Time: 09.25 PM</p>
+                        </div>
+                    </div>
+                    <p class="news-description">Bangladesh has successfully launched a new satellite, marking a
+                        significant step in technological advancement and connectivity. This milestone aims to enhance
+                        communication, support disaster management, and boost economic growth, reflecting the nation's
+                        commitment to innovation and progress on the global stage.</p>
+                    <button class="news-button">Read More</button>
+                </div>
+            </div>
+        </section>
         <!-- donate today -->
         <section class="section-donate">
             <h3 class="section-donate-title">Donate Today</h3>
-            <p class="section-donate-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
-                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
-                renewable energy, digital transformation, and robust infrastructure.</p>
+            <p class="section-donate-description">Join the mission to create a truly civilized world where dignity,
+                equality, and decent living conditions are a reality for everyone. Your contribution can make a
+                difference—be part of the change.</p>
             <div class="donate-container">
                 <div class=""><button class="donate">100 Taka</button></div>
                 <div class=""><button class="donate">200 Taka</button></div>
@@ -144,14 +188,16 @@
         <section class="section-newslatter">
             <h2 class="section-newslatter-title">Subscribe Newsletter</h2>
             <div class="section-newslatter-description">
-                <p>Bangladesh 2.0 aims to redefine the nation's trajectory by
-                    embracing cutting-edge technology, promoting inclusive growth.</p>
+                <p>Stay informed and inspired! Get updates on our mission, stories of impact, and ways you can
+                    contribute to creating a more equitable and compassionate world. Subscribe today and join the
+                    journey toward meaningful change.
+                </p>
             </div>
             <div class="newslatter-container">
-                    <input class="search-input" placeholder="Enter your email here">
-                    <div class="newslatter-subscribe">
-                        <button class="newslatter-subscribe-button">Subscribe</button>
-                    </div>
+                <input class="search-input" placeholder="Enter your email here">
+                <div class="newslatter-subscribe">
+                    <button class="newslatter-subscribe-button">Subscribe</button>
+                </div>
             </div>
             <div class="section-newslatter-description">
                 <p>We promise not to spam you!</p>
