--- a/index.html
+++ b/index.html
@@ -32,7 +32,34 @@
         </section>
     </header>
     <main class="body-bg">
-        <!-- the vision of container -->
+        <!-- Pillars of "Bangladesh 2.0" -->
+         <section class="piller-section">
+            <h3>Pillars of "Bangladesh 2.0"</h3>
+            <div class="piller-container">
+                <div class="piller">
+                    <img src="assets/card-icon.png" alt="">
+                    <p class="piller-heading">Innovation</p>
+                    <p class="piller-description">The "Innovation" pillar of Bangladesh 2.0 champions creativity, technology, and entrepreneurship to drive progress.</p>
+                </div>
+                <div class="piller">
+                    <img src="assets/card-icon.png" alt="">
+                    <p class="piller-heading">Sustainability</p>
+                    <p class="piller-description">The "Sustainability" pillar emphasizes environmental preservation, renewable energy adoption, and eco-friendly practices.</p>
+                </div>
+                <div class="piller">
+                    <img src="assets/card-icon.png" alt="">
+                    <p class="piller-heading">Infrastructure</p>
+                    <p class="piller-description">The "Infrastructure" pillar aims to develop world-class transportation, energy, and communication systems.</p>
+                </div>
+                <div class="piller">
+                    <img src="assets/card-icon.png" alt="">
+                    <p class="piller-heading">Empowerment</p>
+                    <p class="piller-description">The "Empowerment" pillar prioritizes education, skill development, and gender equality.</p>
+                </div>
+            </div>
+            
+         </section>
+        <!-- the vision of future -->
         <section class="visions">
             <h3 class="vision-title">The Vision of Future</h3>
             <p class="vision-description">The vision for New Bangladesh is rooted in the synergy of ideas, innovation,
@@ -63,16 +90,62 @@
             </div>
         </section>
         <!-- Quote Section -->
-         <section class="quote-section">
+        <section class="quote-section">
             <div class="quote-box">
-                <p class="quote-description">Dr. Muhammad Yunus, a Nobel Peace Prize laureate from Bangladesh, is renowned as the pioneer of microfinance and social business. Through the Grameen Bank, he revolutionized access to credit for the poor, particularly women, enabling economic empowerment and poverty reduction worldwide. His visionary work continues to inspire efforts for financial inclusion and social innovation.</p>
+                <p class="quote-description">Dr. Muhammad Yunus, a Nobel Peace Prize laureate from Bangladesh, is
+                    renowned as the pioneer of microfinance and social business. Through the Grameen Bank, he
+                    revolutionized access to credit for the poor, particularly women, enabling economic empowerment and
+                    poverty reduction worldwide. His visionary work continues to inspire efforts for financial inclusion
+                    and social innovation.</p>
             </div>
             <div class="quote-content">
                 <h3 class="quote-heading">Dr. Muhammad Yunus</h3>
                 <p class="quote-description">Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
-         </section>
-
+        </section>
+        <!-- opinion Section -->
+        <section class="opinion-section">
+            <h3>Your Opinion Matters</h3>
+            <div class="opinion-container">
+                <div class="opinion opinion-bg">
+                    <h4> Questions</h4>
+                    <h4>Select Your Opinion</h4>
+                </div>
+                <div class="opinion">
+                    <div>
+                        <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                    </div>
+                    <div class="opinion-option">
+                        <select>
+                            <option>yes, I Agree</option>
+                            <option>No</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="opinion">
+                    <div>
+                        <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                    </div>
+                    <div class="opinion-option">
+                        <select>
+                            <option>yes, I Agree</option>
+                            <option>No</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="opinion">
+                    <div>
+                        <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                    </div>
+                    <div class="opinion-option">
+                        <select>
+                            <option>yes, I Agree</option>
+                            <option>No</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- recent news-1 -->
         <section class="recent-news">
             <h3 class="recent-news-title">Recent News</h3>
